Fix styling on mobile devices and some components

--- a/css/common.css
+++ b/css/common.css
@@ -52,6 +52,7 @@ main {
     }
     
     main {
+        margin: 0;
         margin-left: 72px;
     
         grid-column: 2/3;
