--- a/css/component-navigation.css
+++ b/css/component-navigation.css
@@ -134,6 +134,7 @@
         display: flex;
         flex-flow: row nowrap;
         gap: 12px;
+        align-items: center;
         text-decoration: none;
         color: var(--tertiary-color);
     }
